Footer on mobile issue fixed.

--- a/docroot/sites/all/themes/ambitious/sass/general.scss
+++ b/docroot/sites/all/themes/ambitious/sass/general.scss
@@ -235,7 +235,7 @@ field .
     }
     .block.last.even {
         @include breakpoint($mobile) {
-            margin-top: 185px;
+            margin-top: 210px;
         }
     }
     .region.region-footer-right {
